--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build:dev": "ts-node --project ./tsconfig-dev.json ./tasks/run-build.ts -d",
     "make": "nodemon ./dist/documentation/index.js -e js,njk --watch",
     "start": "http-server -p 3060",
+    "helper": "node ./dist/cli/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
