--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
   "engineStrict": true,
   "scripts": {
     "build": "ts-node ./tasks/run-build.ts",
-    "build:dev": "ts-node --project ./tsconfig-dev.json ./tasks/run-build.ts -d",
+    "build:dev": "ts-node ./tasks/run-build.ts -d",
     "make": "nodemon ./dist/documentation/index.js -e js,njk --watch",
     "start": "http-server -p 3060",
     "helper": "node ./dist/cli/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-tests:dev": "tsc --project ./tsconfig-test.json",
+    "test": "jest ./dist-test --watch"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.24",
     "@types/node": "^14.14.31",
     "@types/nunjucks": "^3.1.5",
     "http-server": "^0.12.3",
+    "jest": "^27.0.6",
     "marked": "^2.1.3",
     "nodemon": "^2.0.12",
     "nunjucks": "^3.2.3",
