--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "tsconf-workshop",
+  "name": "tsch",
   "version": "1.0.0",
-  "main": "./dist/index.js",
   "files": [
     "/dist"
   ],
+  "main": "./dist/cli/index.js",
   "types": "./dist/__types__",
+  "bin": {
+    "tsch": "./dist/cli/index.js"
+  },
   "engines": {
     "node": ">=12.10.0"
   },
@@ -13,21 +16,14 @@
   "scripts": {
     "build": "ts-node ./tasks/run-build.ts",
     "build:dev": "ts-node ./tasks/run-build.ts -d",
-    "make": "nodemon ./dist/documentation/index.js -e js,njk --watch",
-    "start": "http-server -p 3060",
-    "helper": "node ./dist/cli/index.js",
+    "start": "node ./dist/cli/index.js",
     "build-tests:dev": "tsc --project ./tsconfig-test.json",
     "test": "jest ./dist-test --watch"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
     "@types/node": "^14.14.31",
-    "@types/nunjucks": "^3.1.5",
-    "http-server": "^0.12.3",
     "jest": "^27.0.6",
-    "marked": "^2.1.3",
-    "nodemon": "^2.0.12",
-    "nunjucks": "^3.2.3",
     "ts-node": "^9.1.1",
     "typescript": "^4.4.0-beta"
   }
