Add release script.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "build:dev": "ts-node ./tasks/run-build.ts -d",
     "start": "node ./dist/cli/index.js",
     "build-tests:dev": "tsc --project ./tsconfig-test.json",
-    "test": "jest ./dist-test --watch"
+    "test": "jest ./dist-test --watch",
+    "release": "ts-node ./tasks/run-release.ts"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
